--- a/index.html
+++ b/index.html
@@ -13,34 +13,63 @@
 <html>
   <head>
     <title>Tifanny Sanches - DoWhile 2021</title>
-    <style>
-      /* Cascating Stylesheet 
-      O elemento que entra por último é o que tem mais força na cascata*/
 
-      html,
-      body {
-        height: 100%;
-      }
+    <link rel="stylesheet" href="style.css" />
 
-      body {
-        display: grid;
-        place-items: center;
-
-        background: lightseagreen;
-      }
-
-      h1 {
-        font-size: 1.5rem;
-      }
-
-      a {
-        color: black;
-        text-decoration: none;
-      }
-    </style>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
-    <h1>Tinny</h1>
-    <a href="https://www.instagram.com/tifannysanches/">@tifannysanches</a>
+    <main>
+      <div class="container">
+        <div class="avatar">
+          <span>
+            <img src="images/selo.svg" alt="Selo Rocketseat" />
+          </span>
+          <img
+            src="https://cdn.discordapp.com/attachments/596496015037693954/900823774348316694/IMG_20210803_212131_909.webp"
+            alt="Foto Pessoal"
+          />
+        </div>
+
+        <h1>Tinny</h1>
+        <a href="https://github.com/Tinnyschz" target="_blank">
+          <img src="images/github.svg" alt="ícone github" />
+          Tinnyschz</a
+        >
+
+        <p>An instructor focused on helping pople start programming for web</p>
+
+        <ul>
+          <li>
+            <a
+              href="https://www.youtube.com/watch?v=dQw4w9WgXcQ"
+              target="_blank"
+            >
+              <img src="images/youtube.svg" alt="ícone youtube" />
+            </a>
+          </li>
+          <li>
+            <a href="https://www.instagram.com/tifannysanches" target="_blank">
+              <img src="images/instagram.svg" alt="ícone instagram" />
+            </a>
+          </li>
+          <li>
+            <a href="https://www.facebook.com/LittleWolfiie" target="_blank">
+              <img src="images/facebook.svg" alt="ícone facebook" />
+            </a>
+          </li>
+          <li>
+            <a href="https://twitter.com/FatosBaleia?s=20" target="_blank">
+              <img src="images/twitter.svg" alt="ícone twitter" />
+            </a>
+          </li>
+        </ul>
+      </div>
+    </main>
   </body>
 </html>
