alteração da descrição do crachá

--- a/index.html
+++ b/index.html
@@ -42,7 +42,10 @@
           Tinnyschz</a
         >
 
-        <p>An instructor focused on helping pople start programming for web</p>
+        <p>
+          Estudante de HTML, CSS, JS e Python. Jogadora de Stardew Valley nas
+          horas vagas.
+        </p>
 
         <ul>
           <li>
@@ -64,7 +67,7 @@
             </a>
           </li>
           <li>
-            <a href="https://twitter.com/FatosBaleia?s=20" target="_blank">
+            <a href="https://twitter.com/Little_Wolfiie" target="_blank">
               <img src="images/twitter.svg" alt="ícone twitter" />
             </a>
           </li>
