--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <html>
   <head>
-    <title>Tifanny Sanches - DoWhile 2021</title>
+    <title>Crachá DoWhile 2021 - Tinny</title>
 
     <link rel="stylesheet" href="style.css" />
 
@@ -33,22 +33,20 @@
           <img
             src="https://cdn.discordapp.com/attachments/596496015037693954/900823774348316694/IMG_20210803_212131_909.webp"
             alt="Foto Pessoal"
+            id="userPhoto"
           />
         </div>
 
-        <h1>Tinny</h1>
-        <a href="https://github.com/Tinnyschz" target="_blank">
+        <h1 id="userName">Tinny</h1>
+        <a id="gitHubLink" href="https://github.com/Tinnyschz" target="_blank">
           <img src="images/github.svg" alt="ícone github" />
-          Tinnyschz</a
+          <span id="userLogin">Tinnyschz</span></a
         >
 
-        <p>
-          Estudante de HTML, CSS, JS e Python. Jogadora de Stardew Valley nas
-          horas vagas.
-        </p>
+        <p id="userBio">Escrever a bio aqui</p>
 
-        <ul>
-          <li>
+        <ul id="socialLinks">
+          <li class="youtube">
             <a
               href="https://www.youtube.com/watch?v=dQw4w9WgXcQ"
               target="_blank"
@@ -56,32 +54,20 @@
               <img src="images/youtube.svg" alt="ícone youtube" />
             </a>
           </li>
-          <li>
+          <li class="instagram">
             <a href="https://www.instagram.com/tifannysanches" target="_blank">
               <img src="images/instagram.svg" alt="ícone instagram" />
             </a>
           </li>
-          <li>
+          <li class="linkedin">
             <a
               href="https://www.linkedin.com/in/tifanny-sanches-4570841b4/"
               target="_blank"
             >
-              <svg
-                width="48"
-                height="48"
-                viewBox="0 0 48 48"
-                fill="none"
-                xmlns="http://www.w3.org/2000/svg"
-              >
-                <rect width="48" height="48" fill="#323238" />
-                <path
-                  d="M31.8546 14.4H16.1455C15.1811 14.4 14.4 15.1811 14.4 16.1455V31.8546C14.4 32.8189 15.1811 33.6 16.1455 33.6H31.8546C32.8189 33.6 33.6 32.8189 33.6 31.8546V16.1455C33.6 15.1811 32.8189 14.4 31.8546 14.4ZM20.469 30.1091H17.8944V21.8252H20.469V30.1091ZM19.1555 20.6409C18.3256 20.6409 17.6544 19.968 17.6544 19.1398C17.6544 18.3116 18.3264 17.6396 19.1555 17.6396C19.9829 17.6396 20.6557 18.3125 20.6557 19.1398C20.6557 19.968 19.9829 20.6409 19.1555 20.6409ZM30.1126 30.1091H27.5398V26.0806C27.5398 25.1197 27.5224 23.884 26.2019 23.884C24.8623 23.884 24.6563 24.9304 24.6563 26.0108V30.1091H22.0835V21.8252H24.5533V22.9571H24.5882C24.9321 22.3061 25.7717 21.6192 27.024 21.6192C29.6309 21.6192 30.1126 23.335 30.1126 25.5657V30.1091V30.1091Z"
-                  fill="white"
-                />
-              </svg>
+              <img src="images/linkedin.svg" alt="ícone linkedin" />
             </a>
           </li>
-          <li>
+          <li class="twitter">
             <a href="https://twitter.com/Little_Wolfiie" target="_blank">
               <img src="images/twitter.svg" alt="ícone twitter" />
             </a>
@@ -89,5 +75,7 @@
         </ul>
       </div>
     </main>
+
+    <script src="main.js"></script>
   </body>
 </html>
